--- a/app/views/cats/edit.html.erb
+++ b/app/views/cats/edit.html.erb
@@ -1,4 +1,5 @@
 <%= @cat.errors.full_messages unless @cat.errors.empty? %>
 
-<h1>Create a new cat!</h1>
+<h1>Edit a cat!</h1>
+
 <%= render "shared/form" %>
